# seam_carving

./: CMakeLists.txt  README.md
src/: seam_carving  seam_carving.cpp
